사용자의 등급에 따른 추가 할인과 팩토리 메서드 패턴 적용